--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-day-picker": "^9.10.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-phone-input-2": "^2.15.1",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.1",
     "recharts": "^2.15.4",
