--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "keycloak-js": "^26.2.1",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
